Maquetado sección servicios con css de movil

--- a/app/index.html
+++ b/app/index.html
@@ -33,14 +33,45 @@
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contacto</a></li>
           </ul>
-          <div class="logins"><a class="btn btn-block btn-secondary btnIngresar" href="https://www.swpro.com.co/login/" target="_blank">Ingresar</a><a class="btn btn-block btn-secondary btnCyrius" href="http://cyrius.herokuapp.com/" target="_blank">Cyrius</a></div>
+          <div class="logins"><a class="btn btn-block btn-secondary btnAzul" href="https://www.swpro.com.co/login/" target="_blank">Ingresar</a><a class="btn btn-block btn-secondary btnVerdeMenta" href="http://cyrius.herokuapp.com/" target="_blank">Cyrius</a></div>
         </nav>
       </div>
     </header>
     <div class="welcome-text text-xs-center">
       <div class="container">
-        <h2 class="display-4">Bienvenidos a Swpro</h2>
+        <h1 class="display-4">Bienvenidos a Swpro</h1>
         <p>Desarrollo de software a la medida de su empresa</p>
+      </div>
+    </div>
+  </section>
+  <section class="services">
+    <div class="wedo text-xs-center">
+      <div class="container">       
+        <h1>Lo que hacemos</h1>
+        <p>Creamos productos enfocados en mejorar y aumentar la productividad de cada proyecto.</p>
+        <div class="row">
+          <div class="col-xs-12">
+            <div class="servicio"><img src="images/service_1.svg" alt=""/>
+              <h2 class="font-weight-bold">Software a la medida</h2>
+              <p>Desarrollamos software y aplicaciones web de acuerdo a las necesidades de cada empresa o negocio personal. Usamos las últimas tecnologías de punta en el desarrollo de cada solución.</p>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="servicio"><img src="images/service_2.svg" alt=""/>
+              <h2 class="font-weight-bold">Diseño Web</h2>
+              <p>Creamos sitios web autoadministrables, interactivos, con diseños personalizados y adaptables a cualquier dispositivo.</p>
+            </div>
+          </div>
+          <div class="col-xs-12">
+            <div class="servicio"><img src="images/service_3.svg" alt=""/>
+              <h2 class="font-weight-bold">Consultoría IT</h2>
+              <p>Capacitamos y damos formación en diferentes tecnologías, área de sistemas, desarrollo y seguridad informática.</p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12"><a class="btn btn-block btn-secondary btnAzul" href="#">Conocer más</a></div>
+        </div>
       </div>
     </div>
   </section>
