--- a/app/index.html
+++ b/app/index.html
@@ -113,6 +113,52 @@
           <h4> Proyecto 3</h4></a><a href="#"><img src="http://lorempixel.com/300/200/" alt=""/>
           <h4> Proyecto 4</h4></a><a href="#"><img src="http://lorempixel.com/300/200/" alt=""/>
           <h4> Proyecto 5</h4></a></div>
+      <div class="row">
+        <div class="col-xs-12"><a class="btn btn-block btn-secondary btnAzul" href="#">Ver todos los proyectos</a></div>
+      </div>
+    </div>
+  </section>
+  <section class="blog__contact">
+    <div class="container">
+      <!--Sección Blog-->
+      <div class="row">
+        <div class="col-xs-12 col-md-6">
+          <h2 class="text-xs-center headBlogContact">El Blog</h2><a href="#">
+            <article><img src="http://lorempixel.com/80/80/"/>
+              <div class="detailPost">
+                <p class="dateBlog">JUN 16, 2017</p>
+                <p class="resumeExcerpt">Instalar Sublime Text 3 en Ubuntu</p>
+              </div>
+            </article></a><a href="#">
+            <article><img src="http://lorempixel.com/80/80/"/>
+              <div class="detailPost">
+                <p class="dateBlog">JUN 16, 2017</p>
+                <p class="resumeExcerpt">Instalar Sublime Text 3 en Ubuntu</p>
+              </div>
+            </article></a><a href="#">
+            <article><img src="http://lorempixel.com/80/80/"/>
+              <div class="detailPost">
+                <p class="dateBlog">JUN 16, 2017</p>
+                <p class="resumeExcerpt">Instalar Sublime Text 3 en Ubuntu</p>
+              </div>
+            </article></a><a class="btn btn-block btn-secondary btnAzul" href="#">Ver todas las entradas del blog</a>
+        </div>
+        <div class="col-xs-12 col-md-5 offset-md-1">
+          <h2 class="text-xs-center headBlogContact">Contáctanos</h2>
+          <p>En qué te podemos ayudar
+            <form class="contactForm">
+              <div class="form-group">
+                <label for="nombre">Nombres:</label>
+                <input class="form-control" type="text" placeholder="tu nombre"/>
+                <label for="email">Email:</label>
+                <input class="form-control" type="email" placeholder="tu correo"/>
+                <label for="Mensaje">Email:</label>
+                <textarea class="form-control" type="email" placeholder="tu mensaje" rows="3"></textarea>
+              </div>
+            </form>
+          </p>
+        </div>
+      </div>
     </div>
   </section>
   <footer>
