--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,14 @@
       </div>
     </div>
   </footer>
+  <div class="credits">
+    <div class="container">
+      <div class="creditsContainer">
+        <p class="creditsInfo">&copy; Swpro - Pitalito, Huila, CO.(+57) 312 597 8691 - 300 251 8971            </p>
+        <div class="socialLinks"><a href="https://www.facebook.com/swpro.co" target="_blank"><i class="fa fa-facebook-official"></i></a><a href="https://github.com/swprosoft" target="_blank"><i class="fa fa-github-square"></i></a><a href="https://swproteam.slack.com/" target="_blank"><i class="fa fa-slack"></i></a></div>
+      </div>
+    </div>
+  </div>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
