Falta ajustar el menu...Estilizado y maquetado v md

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
   <!--Bootstrap-->
   <link rel="stylesheet" href="css/bootstrap.min.css"/>
+  <!--Bootstrap CDN-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"/>
   <!--Font Awesome-->
   <link rel="stylesheet" href="css/font-awesome.min.css"/>
+  <!--Animate-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"/>
   <!--Carousel-->
   <link rel="stylesheet" href="css/owl.carousel.min.css"/>
   <link rel="stylesheet" href="css/owl.theme.default.min.css"/>
@@ -53,19 +57,19 @@
         <h1>Lo que hacemos</h1>
         <p>Creamos productos enfocados en mejorar y aumentar la productividad de cada proyecto.</p>
         <div class="row">
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-4">
             <div class="servicio"><img src="images/service_1.svg" alt=""/>
               <h2 class="font-weight-bold">Software a la medida</h2>
               <p>Desarrollamos software y aplicaciones web de acuerdo a las necesidades de cada empresa o negocio personal. Usamos las últimas tecnologías de punta en el desarrollo de cada solución.</p>
             </div>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-4">
             <div class="servicio"><img src="images/service_2.svg" alt=""/>
               <h2 class="font-weight-bold">Diseño Web</h2>
               <p>Creamos sitios web autoadministrables, interactivos, con diseños personalizados y adaptables a cualquier dispositivo.</p>
             </div>
           </div>
-          <div class="col-xs-12">
+          <div class="col-xs-12 col-md-4">
             <div class="servicio"><img src="images/service_3.svg" alt=""/>
               <h2 class="font-weight-bold">Consultoría IT</h2>
               <p>Capacitamos y damos formación en diferentes tecnologías, área de sistemas, desarrollo y seguridad informática.</p>
@@ -73,32 +77,28 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-xs-12"><a class="btn btn-block btn-secondary btnAzul" href="#">Conocer más</a></div>
+          <div class="col-xs-12 col-md-4 offset-md-4"><a class="btn btn-block btn-secondary btnAzul" href="#">Conocer más</a></div>
         </div>
       </div>
     </div>
   </section>
   <section class="workflow">
-    <div class="container-fluid">
-      <h1 class="text-xs-center">Nuestro Workflow</h1>
+    <h1 class="text-xs-center">Nuestro Workflow</h1>
+    <div class="container-fluid" id="contenedorWorkflow">
       <div class="row">
-        <div class="col-xs"><img src="images/workflow_1.svg" alt=""/>
+        <div class="col">           <img src="images/workflow_1.png" alt=""/>
           <p>Análisis</p>
         </div>
-        <div class="col-xs"><img src="images/workflow_2.svg" alt=""/>
+        <div class="col"><img src="images/workflow_2.png" alt=""/>
           <p>Diseño</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs"><img src="images/workflow_3.svg" alt=""/>
+        <div class="col"><img src="images/workflow_3.png" alt=""/>
           <p>Construcción</p>
         </div>
-        <div class="col-xs"><img src="images/workflow_4.svg" alt=""/>
+        <div class="col"><img src="images/workflow_4.png" alt=""/>
           <p>Lanzamiento</p>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xs"><img src="images/workflow_5.svg" alt=""/>
+        <div class="col"><img src="images/workflow_5.png" alt=""/>
           <p>Soporte</p>
         </div>
       </div>
@@ -114,7 +114,7 @@
           <h4> Proyecto 4</h4></a><a href="#"><img src="http://lorempixel.com/300/200/" alt=""/>
           <h4> Proyecto 5</h4></a></div>
       <div class="row">
-        <div class="col-xs-12"><a class="btn btn-block btn-secondary btnAzul" href="#">Ver todos los proyectos</a></div>
+        <div class="col-xs-12 col-md-4 offset-md-4"><a class="btn btn-block btn-secondary btnAzul" href="#">Ver todos los proyectos</a></div>
       </div>
     </div>
   </section>
@@ -141,7 +141,7 @@
                 <p class="dateBlog">JUN 16, 2017</p>
                 <p class="resumeExcerpt">Instalar Sublime Text 3 en Ubuntu</p>
               </div>
-            </article></a><a class="btn btn-block btn-secondary btnAzul" href="#">Ver todas las entradas del blog</a>
+            </article></a><a class="btn btn-block btn-secondary btnAzul text-white" href="#">Ver todas las entradas del blog</a>
         </div>
         <div class="col-xs-12 col-md-5 offset-md-1">
           <h2 class="text-xs-center headBlogContact">Contáctanos</h2>
